# fips-yoctogl

./: CMakeLists.txt  README.md  fips.yml
yocto/: yglio.cpp
