if (NOT FIPS_IMPORT)
    cmake_minimum_required(VERSION 2.8)
    get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
    include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
    fips_setup()
    fips_project(fips-yoctogl)
endif()

if ((FIPS_MACOS OR FIPS_WINDOWS OR FIPS_LINUX) AND NOT (FIPS_RASPBERRYPI OR FIPS_OSX_USE_ARC OR FIPS_UWP))
    # compile flags
    if(APPLE)
        add_definitions(-Wall)
    endif(APPLE)
    if(MSVC)
        add_definitions(/D_CRT_SECURE_NO_WARNINGS /wd4018 /wd4244 /wd4305 /wd4800 /wd4267)
        set(CMAKE_CXX_FLAGS "/EHsc")
    endif(MSVC)
    fips_begin_lib(ygl)
    include_directories(yocto)
    fips_src(yocto RECURSE GROUP)
    fips_end_lib()
    if(UNIX AND NOT APPLE)
    find_package(Threads REQUIRED)
    target_link_libraries(ygl Threads::Threads)
endif(UNIX AND NOT APPLE)
endif()

if (NOT FIPS_IMPORT)
    fips_finish()
endif()